style/fix: Ensure overflow is hidden in menu-item.styles
- Apply hidden overflow.

- Alter .background-image scale prop to be slightly larger.

--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,12 +7,13 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
 
   &:hover {
     cursor: pointer;
 
     & .background-image {
-      transform: scale(1.1);
+      transform: scale(1.125);
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
 
